added itemInSession to second query

--- a/Project_1B_ Project_Template.ipynb
+++ b/Project_1B_ Project_Template.ipynb
@@ -104,9 +104,9 @@
     "            full_data_rows_list.append(line) \n",
     "            \n",
     "# uncomment the code below if you would like to get total number of rows \n",
-    "#print(len(full_data_rows_list))\n",
+    "print(len(full_data_rows_list))\n",
     "# uncomment the code below if you would like to check to see what the list of event data rows will look like\n",
-    "#print(full_data_rows_list)\n",
+    "print(full_data_rows_list)\n",
     "\n",
     "# creating a smaller event data csv file called event_datafile_full csv that will be used to insert data into the \\\n",
     "# Apache Cassandra tables\n",
@@ -145,8 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part II. Complete the Apache Cassandra coding portion of your project. \n",
-    "\n",
+    "# Part II. Complete the Apache Cassandra coding portion of your project.\n",
     "## Now you are ready to work with the CSV file titled <font color=red>event_datafile_new.csv</font>, located within the Workspace directory.  The event_datafile_new.csv contains the following columns: \n",
     "- artist \n",
     "- firstName of user\n",
@@ -181,9 +180,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Unable to connect to any servers', {'127.0.0.1:9042': ConnectionRefusedError(61, \"Tried connecting to [('127.0.0.1', 9042)]. Last error: Connection refused\")})\n"
+     ]
+    },
+    {
+     "ename": "DriverException",
+     "evalue": "Cluster is already shut down",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mDriverException\u001B[0m                           Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-36-0091cd95bb96>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m     10\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     11\u001B[0m \u001B[0;31m# To establish connection and begin executing queries, need a session\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 12\u001B[0;31m \u001B[0msession\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mcluster\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mconnect\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     13\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m~/PycharmProjects/Data-Modeling-Cassandra/venv/lib/python3.8/site-packages/cassandra/cluster.cpython-38-darwin.so\u001B[0m in \u001B[0;36mcassandra.cluster.Cluster.connect\u001B[0;34m()\u001B[0m\n",
+      "\u001B[0;32m~/PycharmProjects/Data-Modeling-Cassandra/venv/lib/python3.8/site-packages/cassandra/cluster.cpython-38-darwin.so\u001B[0m in \u001B[0;36mcassandra.cluster.Cluster.connect\u001B[0;34m()\u001B[0m\n",
+      "\u001B[0;31mDriverException\u001B[0m: Cluster is already shut down"
+     ]
+    }
+   ],
    "source": [
     "# This should make a connection to a Cassandra instance your local machine \n",
     "# (127.0.0.1)\n",
@@ -208,9 +228,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Unable to complete the operation against any hosts', {<Host: 127.0.0.1:9042 datacenter1>: ConnectionException('Pool is shutdown')})\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    session.execute(\"\"\"\n",
@@ -232,9 +260,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Unable to complete the operation against any hosts', {<Host: 127.0.0.1:9042 datacenter1>: ConnectionException('Pool is shutdown')})\n"
+     ]
+    }
+   ],
    "source": [
     "# TO-DO: Set KEYSPACE to the keyspace specified above\n",
     "try:\n",
@@ -259,7 +295,7 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": null,
+   "execution_count": 38,
    "outputs": []
   },
   {
@@ -269,20 +305,28 @@
     "## Create queries to ask the following three questions of the data\n",
     "\n",
     "### 1. Give me the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4\n",
-    "select artist, song, length from session_library WHERE sessionId=338 and itemInSession=4\n",
+    "# select artist, song, length from session_library WHERE sessionId=338 and itemInSession=4\n",
     "\n",
     "### 2. Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
-    "select artist, song, and user from user_library WHERE userid=10 and sessionid=182\n",
+    "# select artist, song, and user from user_library WHERE userid=10 and sessionid=182\n",
     "\n",
     "### 3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
-    "select user from music_app_history WHERE song=\"All Hands Against His Own\""
+    "# select user from song_library WHERE song=\"All Hands Against His Own\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Unable to complete the operation against any hosts', {<Host: 127.0.0.1:9042 datacenter1>: ConnectionException('Pool is shutdown')})\n"
+     ]
+    }
+   ],
    "source": [
     "## TO-DO: Query 1:  Give me the artist, song title and song's length in the music app history that was heard during \\\n",
     "## sessionId = 338, and itemInSession = 4\n",
@@ -307,11 +351,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NoHostAvailable",
+     "evalue": "('Unable to complete the operation against any hosts', {<Host: 127.0.0.1:9042 datacenter1>: ConnectionException('Pool is shutdown')})",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNoHostAvailable\u001B[0m                           Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-41-d14053cf44e4>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m     11\u001B[0m         \u001B[0;31m## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     12\u001B[0m         \u001B[0;31m## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 13\u001B[0;31m         \u001B[0msession\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mexecute\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mquery\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m(\u001B[0m\u001B[0mint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mline\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m8\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mline\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m3\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mline\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m0\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mline\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m9\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mfloat\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mline\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m5\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     14\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     15\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m~/PycharmProjects/Data-Modeling-Cassandra/venv/lib/python3.8/site-packages/cassandra/cluster.cpython-38-darwin.so\u001B[0m in \u001B[0;36mcassandra.cluster.Session.execute\u001B[0;34m()\u001B[0m\n",
+      "\u001B[0;32m~/PycharmProjects/Data-Modeling-Cassandra/venv/lib/python3.8/site-packages/cassandra/cluster.cpython-38-darwin.so\u001B[0m in \u001B[0;36mcassandra.cluster.ResponseFuture.result\u001B[0;34m()\u001B[0m\n",
+      "\u001B[0;31mNoHostAvailable\u001B[0m: ('Unable to complete the operation against any hosts', {<Host: 127.0.0.1:9042 datacenter1>: ConnectionException('Pool is shutdown')})"
+     ]
+    }
+   ],
    "source": [
     "# We have provided part of the code to set up the CSV file. Please complete the Apache Cassandra code below#\n",
     "file = 'event_datafile_new.csv'\n",
@@ -325,34 +383,8 @@
     "        query = query + \" VALUES (%s, %s, %s, %s, %s)\"\n",
     "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
     "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
-    "        session.execute(query, (int(line[8]), int(line[3]), line[0], line[9], float(line[5])))"
+    "        session.execute(query, (int(line[8]), int(line[3]), line[0], line[9], float(line[5])))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error from server: code=2200 [Invalid query] message=\"unconfigured table session_library\"\n"
-     ]
-    }
-   ],
-   "source": [
-    "# query = \"drop table session_library\"\n",
-    "# try:\n",
-    "#     rows = session.execute(query)\n",
-    "# except Exception as e:\n",
-    "#     print(e)\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
   },
   {
    "cell_type": "markdown",
@@ -363,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "metadata": {
     "scrolled": true
    },
@@ -372,7 +404,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Faithless | Music Matters (Mark Knight Dub) | 495.30731201171875\n"
+      "('Unable to complete the operation against any hosts', {<Host: 127.0.0.1:9042 datacenter1>: ConnectionException('Pool is shutdown')})\n"
      ]
     }
    ],
@@ -390,17 +422,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### COPY AND REPEAT THE ABOVE THREE CELLS FOR EACH OF THE THREE QUESTIONS"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Unable to complete the operation against any hosts', {<Host: 127.0.0.1:9042 datacenter1>: ConnectionException('Pool is shutdown')})\n"
+     ]
+    }
+   ],
    "source": [
     "## TO-DO: Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name)\\\n",
     "## for userid = 10, sessionid = 182\n",
@@ -412,14 +445,16 @@
     "column1= userId\n",
     "column2= sessionId\n",
     "column3= artist\n",
-    "column4= song\n",
-    "column5= firstName\n",
-    "column6= lastName\n",
+    "colunn4= itemInSession\n",
+    "column5= song\n",
+    "column6= firstName\n",
+    "column7= lastName\n",
     "PRIMARYKEY= (userId, sessionId)\n",
     "\"\"\"\n",
     "\n",
     "query = \"CREATE TABLE IF NOT EXISTS user_library\"\n",
-    "query = query + \"(userId int, sessionId int, artist text, song text, firstName text, lastName text, PRIMARY KEY \" \\\n",
+    "query = query + \"(userId int, sessionId int, artist text, itemInSession float, song text, firstName text, lastName \" \\\n",
+    "                \"text, PRIMARY KEY \" \\\n",
     "                \"(userId, \" \\\n",
     "                \"sessionId))\"\n",
     "try:\n",
@@ -430,8 +465,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "outputs": [],
+   "execution_count": 44,
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "not enough arguments for format string",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-44-270633da7243>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m     10\u001B[0m         \u001B[0;31m## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     11\u001B[0m         \u001B[0;31m## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 12\u001B[0;31m         \u001B[0msession\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mexecute\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mquery\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m(\u001B[0m\u001B[0mint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mline\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m10\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mline\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m8\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mline\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m0\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mline\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m9\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mline\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m1\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mline\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m4\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     13\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m~/PycharmProjects/Data-Modeling-Cassandra/venv/lib/python3.8/site-packages/cassandra/cluster.cpython-38-darwin.so\u001B[0m in \u001B[0;36mcassandra.cluster.Session.execute\u001B[0;34m()\u001B[0m\n",
+      "\u001B[0;32m~/PycharmProjects/Data-Modeling-Cassandra/venv/lib/python3.8/site-packages/cassandra/cluster.cpython-38-darwin.so\u001B[0m in \u001B[0;36mcassandra.cluster.Session.execute_async\u001B[0;34m()\u001B[0m\n",
+      "\u001B[0;32m~/PycharmProjects/Data-Modeling-Cassandra/venv/lib/python3.8/site-packages/cassandra/cluster.cpython-38-darwin.so\u001B[0m in \u001B[0;36mcassandra.cluster.Session._create_response_future\u001B[0;34m()\u001B[0m\n",
+      "\u001B[0;32m~/PycharmProjects/Data-Modeling-Cassandra/venv/lib/python3.8/site-packages/cassandra/query.cpython-38-darwin.so\u001B[0m in \u001B[0;36mcassandra.query.bind_params\u001B[0;34m()\u001B[0m\n",
+      "\u001B[0;31mTypeError\u001B[0m: not enough arguments for format string"
+     ]
+    }
+   ],
    "source": [
     "file = 'event_datafile_new.csv'\n",
     "\n",
@@ -440,8 +491,8 @@
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
     "    ## TO-DO: Assign the INSERT statements into the `query` variable\n",
-    "        query = \"INSERT INTO user_library (userId, sessionId, artist, song, firstName, lastName)\"\n",
-    "        query = query + \" VALUES (%s, %s, %s, %s, %s, %s)\"\n",
+    "        query = \"INSERT INTO user_library (userId, sessionId, artist, itemInSession, song, firstName, lastName)\"\n",
+    "        query = query + \" VALUES (%s, %s, %s, %s, %s, %s, %s)\"\n",
     "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
     "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
     "        session.execute(query, (int(line[10]), int(line[8]), line[0], line[9], line[1], line[4]))\n",
@@ -456,18 +507,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 47,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lonnie Gordon | Catch You Baby (Steve Pitron & Max Sanna Radio Edit) | Sylvie | Cruz\n"
+      "('Unable to complete the operation against any hosts', {<Host: 127.0.0.1:9042 datacenter1>: ConnectionException('Pool is shutdown')})\n"
      ]
     }
    ],
    "source": [
-    "query = \"select artist, song, firstName, lastName from user_library WHERE userId=10 and sessionId=182\"\n",
+    "query = \"select artist, song, itemInSession, firstName, lastName from user_library WHERE userId=10 and sessionId=182\"\n",
     "try:\n",
     "    rows = session.execute(query)\n",
     "except Exception as e:\n",
@@ -475,7 +526,7 @@
     "\n",
     "for row in rows:\n",
     "    #print(row)\n",
-    "    print(row.artist, row.song, row.firstname, row.lastname, sep=\" | \")\n"
+    "    print(row.artist, row.song, row.iteminsession , row.firstname, row.lastname, sep=\" | \")\n"
    ],
    "metadata": {
     "collapsed": false,
